--- a/templates/messages_list.html
+++ b/templates/messages_list.html
@@ -35,6 +35,7 @@
       {% endfor %}
     </tbody>    
   </table>
+  <a href="{% url 'message_new' %}" class="btn btn-outline-primary">Yangi xabar qo'shish</a>
     
 </div>
 
